{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 78,
  "lineage": "92c9ad70-539c-f90b-982e-83df016c51f6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-05b84098a88127fab",
            "domain": "vpc",
            "id": "eipalloc-0787516132b2135f0",
            "instance": "i-010dd18d5f7e13fb0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c1b83ff13c353cfc",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-52-21-238-97.compute-1.amazonaws.com",
            "public_ip": "52.21.238.97",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.my-first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-first-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0747bdcabd34c712a",
            "arn": "arn:aws:ec2:us-east-1:690138799945:instance/i-010dd18d5f7e13fb0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010dd18d5f7e13fb0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0c1b83ff13c353cfc"
              }
            ],
            "primary_network_interface_id": "eni-0c1b83ff13c353cfc",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "52.21.238.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0355c88fccabb8ffe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a083c81b951a0a47",
            "tags": {
              "Name": "Web-Server"
            },
            "tags_all": {
              "Name": "Web-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00ef281e0c6aec0db"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.my-first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690138799945:internet-gateway/igw-000fa3393eb2c91fa",
            "id": "igw-000fa3393eb2c91fa",
            "owner_id": "690138799945",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-040da419695930b91"
          },
          "dependencies": [
            "aws_vpc.my-first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-04a2e087bc27dc6b4",
                "device_index": 0,
                "instance": "i-010dd18d5f7e13fb0"
              }
            ],
            "id": "eni-0c1b83ff13c353cfc",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:69:3f:37:e2:2b",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-00ef281e0c6aec0db"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a083c81b951a0a47"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.my-first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690138799945:route-table/rtb-0c33e4ae604e56034",
            "id": "rtb-0c33e4ae604e56034",
            "owner_id": "690138799945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-000fa3393eb2c91fa",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-000fa3393eb2c91fa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod"
            },
            "tags_all": {
              "Name": "prod"
            },
            "vpc_id": "vpc-040da419695930b91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-first-vpc",
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009dd1f706ea33b66",
            "route_table_id": "rtb-0c33e4ae604e56034",
            "subnet_id": "subnet-0a083c81b951a0a47"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-route-table",
            "aws_subnet.subnet-1",
            "aws_vpc.my-first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690138799945:security-group/sg-00ef281e0c6aec0db",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ef281e0c6aec0db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "690138799945",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-040da419695930b91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690138799945:subnet/subnet-0a083c81b951a0a47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a083c81b951a0a47",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690138799945",
            "tags": {
              "Name": "prod-subnet"
            },
            "tags_all": {
              "Name": "prod-subnet"
            },
            "vpc_id": "vpc-040da419695930b91"
          },
          "dependencies": [
            "aws_vpc.my-first-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-first-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690138799945:vpc/vpc-040da419695930b91",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01d12432ca6db9674",
            "default_route_table_id": "rtb-068cfa1ead7de86f5",
            "default_security_group_id": "sg-08e5542fb7f0deb5d",
            "dhcp_options_id": "dopt-0dc8298f11ff28203",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-040da419695930b91",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-068cfa1ead7de86f5",
            "owner_id": "690138799945",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            }
          }
        }
      ]
    }
  ]
}